--- a/auth/package.json
+++ b/auth/package.json
@@ -14,7 +14,11 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.9.1",
+    "mongoose": "5.10.19",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.10.3"
   }
 }
