--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -13,12 +13,18 @@ spec:
         app: auth
     spec:
       containers:
-      - name: auth
-        image: us.gcr.io/ticketing-dev-300713/auth
+        - name: auth
+          image: us.gcr.io/ticketing-dev-300713/auth
+          env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
-metadata: 
+metadata:
   name: auth-srv
 spec:
   selector:
