--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -26,3 +26,11 @@ build:
         manual:
           - src: "**/*.{ts,tsx}"
             dest: .
+    - image: us.gcr.io/ticketing-dev-300713/sales
+      context: sales
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
